2008-01-21  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Require camel-1.2 >= 2.21.90 for
	camel_session_build_password_prompt().

	* camel/camel-exchange-store.c (camel_exchange_get_password):
	Use camel_session_build_password_prompt() to build a consistently
	worded prompt message for the password dialog.

2008-01-19  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Bump some additional package requirements for libsoup-2.4:
		libbonobo-2.0 >= 2.20.3
		glib-2.0 >= 2.15.3

2008-01-15  Dan Winship  <danw@gnome.org>

	* addressbook/e-book-backend-exchange.c:
	* calendar/e-cal-backend-exchange-calendar.c: 
	* calendar/e-cal-backend-exchange-tasks.c: 
	* mail/mail-stub-exchange.c: Update for libsoup 2.4, and related
	libexchange changes.

2008-01-14  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump to 2.21.90

2008-01-14  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.5 release

2008-01-13  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #404002

	* calendar/e-cal-backend-exchange-tasks.c: (set_priority),
	(get_changed_tasks): E2K_PR_MAPI_PRIORITY is '-1' for low priority tasks.
	(get_changed_tasks): Set the default priority of tasks as 'Normal' for
	Outlook/OWA compatibility.

2008-01-12  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #501567

	* addressbook/e-book-backend-gal.c: (build_query): If unsupported
	queries, Don't crash.

2007-12-23  Martin Meyer  <elreydetodo@gmail.com>

	** Fix for bug #503356

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in:
	* storage/exchange-autoconfig-wizard.c: (owa_page_next):
	* storage/exchange-autoconfig-wizard.glade:
	* storage/main.c: (main):
	* storage/ximian-connector-setup.c: (main): String change: 
	"Ximian Connector" -> "Evolution Connector for Microsoft Exchange"

2007-12-18  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump to 2.21.5

2007-12-17  Srinivasa Ragavan  <sragavan@novell.com>
